--- a/templates/product.hbs
+++ b/templates/product.hbs
@@ -87,6 +87,31 @@
                         </div>
                     </div>
                 </div>
+                 <div class="section">
+     {{#if c_relatedProducts}}
+         <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-600 text-3xl mb-8">Related Products</div>
+             <div class="grid grid-cols-1 md:grid-cols-3 gap-x-5">
+                 {{#each c_relatedProducts}}
+                     <div class="p-4 border-2 border-gray-50 rounded-xl hover:grow hover:shadow-lg">
+                         <a href={{slug}} class="grid gap-y-5">
+                             <div class="justify-self-center">
+                                 <img class="rounded-xl object-contain sm:h-80 md:h-96" src="{{photoGallery.[0].image.url}}">
+                             </div>
+                             <div class="grid gap-y-2">
+                                 <div class="product-grid-title">{{name}}</div>
+                                 <div class="product-grid-subtitle">
+                                 {{this.brand}}
+                             </div>
+                             <div class="product-grid-price">
+                                 ${{price.value}}
+                             </div>
+                         </div>
+                     </a>
+                 </div>
+             {{/each}}
+         </div>
+     {{/if}}
+ </div> 
             </div>
         </div> 
         <div class="w-full bg-gray-50">
